--- a/v5/06-config-webpack/config-file/package.json
+++ b/v5/06-config-webpack/config-file/package.json
@@ -7,7 +7,7 @@
     "build": "webpack"
   },
   "devDependencies": {
-    "webpack": "5.36.2",
-    "webpack-cli": "4.7.0"
+    "webpack": "^5.39.0",
+    "webpack-cli": "^4.7.2"
   }
 }
