--- a/v5/ch03-configuration/08-watch/simple-watch/package.json
+++ b/v5/ch03-configuration/08-watch/simple-watch/package.json
@@ -4,13 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev:argv": "webpack --watch --info-verbosity verbose",
-    "dev:file": "webpack",
+    "dev:argv": "webpack --watch",
+    "dev:file": "webpack --config webpack.config.watch.js",
     "start-server": "http-server ./dist"
   },
   "devDependencies": {
-    "http-server": "0.12.3",
-    "webpack": "5.36.2",
-    "webpack-cli": "4.7.0"
+    "http-server": "^0.12.3",
+    "webpack": "^5.42.0",
+    "webpack-cli": "^4.7.2"
   }
 }
