--- a/v5/ch03-configuration/09-source-map/babel-source-map/package.json
+++ b/v5/ch03-configuration/09-source-map/babel-source-map/package.json
@@ -7,8 +7,8 @@
     "build": "babel src -d lib --source-maps --source-root /"
   },
   "devDependencies": {
-    "@babel/cli": "7.13.16",
-    "@babel/core": "7.14.0",
-    "@babel/preset-env": "7.14.1"
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7"
   }
 }
