--- a/v5/ch03-configuration/09-source-map/source-map/package.json
+++ b/v5/ch03-configuration/09-source-map/source-map/package.json
@@ -7,10 +7,11 @@
     "dev": "http-server ./dist & webpack --mode production --watch --devtool source-map"
   },
   "devDependencies": {
-    "webpack": "5.36.2",
-    "webpack-cli": "4.7.0"
+    "http-server": "^0.12.3",
+    "webpack": "^5.42.0",
+    "webpack-cli": "^4.7.2"
   },
   "dependencies": {
-    "lodash": "4.17.21"
+    "lodash": "^4.17.21"
   }
 }
