--- a/v5/ch04-real-world/04-image/load-image-by-auto-max-size/package.json
+++ b/v5/ch04-real-world/04-image/load-image-by-auto-max-size/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "load-svg",
+  "name": "load-image-by-url",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -7,8 +7,7 @@
     "build": "webpack"
   },
   "devDependencies": {
-    "svg-inline-loader": "0.8.2",
-    "webpack": "5.36.2",
-    "webpack-cli": "4.7.0"
+    "webpack": "^5.43.0",
+    "webpack-cli": "^4.7.2"
   }
 }
