--- a/v5/ch04-real-world/06-production-code-splitting/entry/package.json
+++ b/v5/ch04-real-world/06-production-code-splitting/entry/package.json
@@ -7,7 +7,7 @@
     "build": "webpack"
   },
   "devDependencies": {
-    "webpack": "5.36.2",
-    "webpack-cli": "4.7.0"
+    "webpack": "^5.44.0",
+    "webpack-cli": "^4.7.2"
   }
 }
