--- a/v5/ch04-real-world/06-production-code-splitting/split-chunks/package.json
+++ b/v5/ch04-real-world/06-production-code-splitting/split-chunks/package.json
@@ -4,13 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --display-modules"
+    "build": "webpack"
   },
   "devDependencies": {
-    "webpack": "5.36.2",
-    "webpack-cli": "4.7.0"
+    "webpack": "^5.44.0",
+    "webpack-cli": "^4.7.2"
   },
   "dependencies": {
-    "lodash": "4.17.21"
+    "lodash": "^4.17.21"
   }
 }
