--- a/v5/ch04-real-world/09-config-setup/function/package.json
+++ b/v5/ch04-real-world/09-config-setup/function/package.json
@@ -8,13 +8,13 @@
     "dev": "webpack --env development"
   },
   "devDependencies": {
-    "@babel/core": "7.14.0",
-    "@babel/preset-env": "7.14.1",
-    "babel-loader": "8.2.2",
-    "webpack": "5.36.2",
-    "webpack-cli": "4.7.0"
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.44.0",
+    "webpack-cli": "^4.7.2"
   },
   "dependencies": {
-    "core-js": "3.12.1"
+    "core-js": "^3.15.2"
   }
 }
