--- a/v5/ch04-real-world/09-config-setup/merge/package.json
+++ b/v5/ch04-real-world/09-config-setup/merge/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chain",
+  "name": "merge",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -8,12 +8,12 @@
     "dev": "webpack --config config/webpack.dev.conf.js"
   },
   "devDependencies": {
-    "@babel/core": "7.14.0",
-    "@babel/preset-env": "7.14.1",
-    "babel-loader": "8.2.2",
-    "webpack": "5.36.2",
-    "webpack-chain": "6.5.1",
-    "webpack-cli": "4.7.0"
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.44.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "core-js": "3.12.1"
