--- a/v5/ch02-getting-started/02-first-webpack/copy-html/package.json
+++ b/v5/ch02-getting-started/02-first-webpack/copy-html/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "^9.0.0",
-    "file-loader": "^6.2.0",
+    "css-loader": "^6.2.0",
     "http-server": "^0.12.3",
     "webpack": "^5.39.0",
     "webpack-cli": "^4.7.2"
