--- a/v5/ch02-getting-started/02-first-webpack/load-style/package.json
+++ b/v5/ch02-getting-started/02-first-webpack/load-style/package.json
@@ -1,5 +1,5 @@
 {
-  "description": "ch02-getting-started/02-first-webpack/load-image/package.json",
+  "description": "ch02-getting-started/02-first-webpack/load-style/package.json",
   "repository": "github:peterhpchen/book-webpack-examples",
   "license": "MIT",
   "scripts": {
@@ -7,7 +7,7 @@
     "start": "http-server ./dist"
   },
   "devDependencies": {
-    "file-loader": "^6.2.0",
+    "css-loader": "^6.2.0",
     "http-server": "^0.12.3",
     "webpack": "^5.39.0",
     "webpack-cli": "^4.7.2"
