--- a/v5/ch03-configuration/03-output/output-path-hash/package.json
+++ b/v5/ch03-configuration/03-output/output-path-hash/package.json
@@ -2,8 +2,8 @@
   "description": "ch03-configuration/03-output/output-path-hash/package.json",
   "license": "MIT",
   "scripts": {
-    "build:argv": "webpack --output-path $PWD/[hash]",
-    "build:argv2": "webpack --output-path [hash]",
+    "build:argv": "webpack --output-path $PWD/[fullhash]",
+    "build:argv2": "webpack --output-path [fullhash]",
     "build:file": "webpack --config webpack.config.demo.js"
   },
   "devDependencies": {
