--- a/v5/ch03-configuration/06-module-use/use-string/package.json
+++ b/v5/ch03-configuration/06-module-use/use-string/package.json
@@ -4,10 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "start": "http-server ./dist"
   },
   "devDependencies": {
-    "file-loader": "^6.2.0",
+    "css-loader": "^6.2.0",
+    "http-server": "^0.12.3",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2"
   }
