--- a/v5/ch05-optimization/05-production-analyze/dashboard-demo/package.json
+++ b/v5/ch05-optimization/05-production-analyze/dashboard-demo/package.json
@@ -10,6 +10,6 @@
   "devDependencies": {
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dashboard": "github:FormidableLabs/webpack-dashboard#chore/refactor-stats"
+    "webpack-dashboard": "^3.3.5"
   }
 }
