--- a/package.json
+++ b/package.json
@@ -2,20 +2,13 @@
   "private": true,
   "scripts": {
     "lint:prettier": "prettier --write --loglevel warn",
-    "lint:all:prettier": "yarn lint:prettier \"**/*.{js,json,css,html,md}\""
+    "lint:all:prettier": "yarn lint:prettier \"**/*.{js,json,css,html,md}\"",
+    "prepare": "husky install"
   },
   "devDependencies": {
-    "@prettier/plugin-pug": "1.8.1",
-    "husky": "4.3.0",
-    "lint-staged": "10.4.0",
-    "prettier": "2.1.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,json,css,html,pug,md}": "yarn lint:prettier"
+    "@prettier/plugin-pug": "1.16.7",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.2.3",
+    "prettier": "2.4.1"
   }
 }
