feat(ch1): add npm to example

--- a/v5/ch07-after-webpack/01-snowpack/vite-demo/package.json
+++ b/v5/ch07-after-webpack/01-snowpack/vite-demo/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "start": "vite preview"
   },
   "dependencies": {
     "vue": "^3.1.4"
