--- a/v5/ch01-before-webpack/03-new-tech/babel/package.json
+++ b/v5/ch01-before-webpack/03-new-tech/babel/package.json
@@ -1,11 +1,10 @@
 {
-  "license": "MIT",
   "scripts": {
     "build": "babel src -d dist"
   },
   "devDependencies": {
-    "@babel/cli": "7.14.3",
-    "@babel/core": "7.14.3",
-    "@babel/preset-env": "7.14.2"
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0"
   }
 }
