--- a/v5/ch01-before-webpack/03-new-tech/postcss/package.json
+++ b/v5/ch01-before-webpack/03-new-tech/postcss/package.json
@@ -1,11 +1,10 @@
 {
-  "license": "MIT",
   "scripts": {
     "build": "postcss src/style.css --dir dist"
   },
   "devDependencies": {
-    "postcss": "8.3.0",
-    "postcss-cli": "8.3.1",
-    "postcss-preset-env": "6.7.0"
+    "postcss": "^8.3.11",
+    "postcss-cli": "^9.0.1",
+    "postcss-preset-env": "^6.7.0"
   }
 }
