--- a/v5/ch01-before-webpack/03-new-tech/sass-example/package.json
+++ b/v5/ch01-before-webpack/03-new-tech/sass-example/package.json
@@ -1,10 +1,9 @@
 {
-  "license": "MIT",
   "scripts": {
     "build": "sass src:dist",
     "dev": "sass --watch src:dist"
   },
   "devDependencies": {
-    "sass": "1.34.0"
+    "sass": "^1.43.4"
   }
 }
