--- a/v5/ch01-before-webpack/05-tools/gulp-browserify/package.json
+++ b/v5/ch01-before-webpack/05-tools/gulp-browserify/package.json
@@ -3,9 +3,8 @@
   "scripts": {
     "start": "gulp"
   },
-  "license": "MIT",
   "devDependencies": {
-    "browserify": "17.0.0",
+    "browserify": "^17.0.0",
     "gulp": "^4.0.2",
     "gulp-connect": "^5.7.0",
     "gulp-exec": "^5.0.0",
