--- a/v5/ch01-before-webpack/05-tools/gulp-example/package.json
+++ b/v5/ch01-before-webpack/05-tools/gulp-example/package.json
@@ -4,9 +4,8 @@
     "start": "gulp start",
     "start2": "gulp start2"
   },
-  "license": "MIT",
   "devDependencies": {
-    "gulp": "4.0.2",
-    "gulp-cli": "2.3.0"
+    "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0"
   }
 }
