--- a/v5/ch02-getting-started/03-install-webpack/local-install/package.json
+++ b/v5/ch02-getting-started/03-install-webpack/local-install/package.json
@@ -1,12 +1,12 @@
 {
   "description": "ch02-getting-started/03-install-webpack/local-install/package.json",
   "scripts": {
+    "install-webpack": "npm install webpack webpack-cli --save-dev",
     "version:webpack": "webpack version"
   },
-  "license": "MIT",
   "devDependencies": {
-    "webpack": "^5.39.1",
-    "webpack-cli": "^4.7.2"
+    "webpack": "^5.61.0",
+    "webpack-cli": "^4.9.1"
   },
   "engines": {
     "node": ">=10.13.0"
