--- a/v5/ch02-getting-started/03-install-webpack/specific-tag/package.json
+++ b/v5/ch02-getting-started/03-install-webpack/specific-tag/package.json
@@ -1,9 +1,9 @@
 {
   "description": "ch02-getting-started/03-install-webpack/specific-tag/package.json",
   "scripts": {
+    "install-webpack": "npm install webpack/webpack#v3.0.0-rc.2 --save-dev",
     "version:webpack": "webpack --version"
   },
-  "license": "MIT",
   "devDependencies": {
     "webpack": "github:webpack/webpack#v3.0.0-rc.2"
   }
