--- a/v5/ch02-getting-started/03-install-webpack/update-webpack/package.json
+++ b/v5/ch02-getting-started/03-install-webpack/update-webpack/package.json
@@ -1,9 +1,11 @@
 {
   "description": "ch02-getting-started/03-install-webpack/update-webpack/package.json",
   "scripts": {
+    "install-webpack": "npm install webpack@3.0.0 --save-dev",
+    "outdated-webpack": "npm outdated webpack",
+    "update-webpack": "npm update webpack",
     "version:webpack": "webpack --version"
   },
-  "license": "MIT",
   "devDependencies": {
     "webpack": "^3.0.0"
   }
