feat(ch3-9): update source-map package.json

--- a/v5/ch03-configuration/09-source-map/source-map/package.json
+++ b/v5/ch03-configuration/09-source-map/source-map/package.json
@@ -1,8 +1,5 @@
 {
-  "name": "source-map",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "description": "ch03-configuration/09-source-map/source-map/package.json",
   "scripts": {
     "dev": "http-server ./dist & webpack --mode production --watch --devtool source-map"
   },
